--- a/Pages/EventAdd.razor
+++ b/Pages/EventAdd.razor
@@ -1,5 +1,7 @@
 ﻿@page "/dogodek_dodaj"
 @using Dj.Models
+@using Dj.Services
+@inject Dj.Services.ApiService ApiService
 
 
 <PageTitle>Dodajanje dogodka</PageTitle>
@@ -10,58 +12,68 @@
         <h1 class="display-2"><b>Dodajanje dogodka</b></h1>
     </div>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-10">
-                <div class="card">
-                    <div class="card-header">
-                        <i class="fas fa-sign-in-alt feature-icon"></i> <b style="font-size:1.5rem">Dodajanje dogodka</b>
-                    </div>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="inputIme">Ime dogodka</label>
-                                <div class="input-icon">
-                                    <i class="fas fa-user"></i>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-10">
+                    <div class="card">
+                        <div class="card-header">
+                            <i class="fas fa-sign-in-alt feature-icon"></i> <b style="font-size:1.5rem">Dodajte svoj nov dogodek</b>
+                        </div>
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="inputIme">Ime dogodka</label>
+                                    <div class="input-icon">
+                                        <i class="fas fa-user"></i>
+                                    </div>
+                                    <input id="inputIme" class="form-control" @bind="@NovEvent.Name" @oninput="(e)=> { NovEvent.Name = e.Value ==null? string.Empty:(string)e.Value; }" />
                                 </div>
-                                <input id="inputIme" class="form-control" @bind="@NovEvent.Name" @oninput="(e)=> { NovEvent.Name = e.Value ==null? string.Empty:(string)e.Value; }" />
-                            </div>
-                            <div class="form-group">
-                                <label for="inputOpis">Opis</label>
-                                <div class="input-icon">
-                                    <i class="fas fa-envelope"></i>
+                                <div class="form-group">
+                                    <label for="inputOpis">Opis</label>
+                                    <div class="input-icon">
+                                        <i class="fas fa-envelope"></i>
+                                    </div>
+                                    <textarea id="inputOpis" rows="6" class="form-control" @bind="@NovEvent.Description" @oninput="(e)=> { NovEvent.Description = e.Value ==null? string.Empty:(string)e.Value; }" />
                                 </div>
-                                <textarea id="inputOpis" rows="6" class="form-control" @bind="@NovEvent.Description" @oninput="(e)=> { NovEvent.Description = e.Value ==null? string.Empty:(string)e.Value; }" />
-                            </div>
-                            <div class="form-group">
-                                <label for="inputDatum">Datum dogodka</label>
-                                <div class="input-icon">
-                                    <i class="fas fa-calendar-alt"></i>
+                                <div class="form-group">
+                                    <label for="inputDatum">Datum dogodka</label>
+                                    <div class="input-icon">
+                                        <i class="fas fa-calendar-alt"></i>
+                                    </div>
+                                    <input id="inputDatum" type="datetime-local" class="form-control" @bind="NovEvent.Date" />
                                 </div>
-                                <input id="inputDatum" type="datetime-local" class="form-control" @bind="NovEvent.Date" />
-                            </div>
-                            <div class="form-group">
-                                <label for="inputLokacija">Lokacija</label>
-                                <div class="input-icon">
-                                    <i class="fas fa-envelope"></i>
+                                <div class="form-group">
+                                    <label for="inputLokacija">Lokacija</label>
+                                    <div class="input-icon">
+                                        <i class="fas fa-envelope"></i>
+                                    </div>
+                                    <input id="inputLokacija" class="form-control" @bind="@NovEvent.Location" @oninput="(e)=> { NovEvent.Location = e.Value ==null? string.Empty:(string)e.Value; }" />
                                 </div>
-                                <input id="inputLokacija" class="form-control" @bind="@NovEvent.Location" @oninput="(e)=> { NovEvent.Location = e.Value ==null? string.Empty:(string)e.Value; }" />
-                            </div>
-                            <button class="button-fancy-blue d-block mx-auto" @onclick="()=>DodajDogodek(NovEvent)">Dodaj dogodek</button>
-                        </form>
+                                <button class="button-fancy-blue d-block mx-auto" @onclick="()=>DodajDogodek(NovEvent)">Dodaj dogodek</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-    </div>
+@*     }
+    else
+    {
+        <h2 class="d-block mx-auto" >Za uporabo te strani se prijavite</h2>
+    } *@
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 @code {
 
+    [CascadingParameter]
+    public AppState? AppState { get; set; }
+
     private DJEvent NovEvent;
+
+
 
     protected override async Task OnInitializedAsync() //Metoda, ki se kliče ob prvem izrisu strani!
     {
@@ -70,13 +82,22 @@
 
     private async void DodajDogodek(DJEvent NovEvent)
     {
-        //var reply = await "APIcall";
-        OsveziPolja();
-        InvokeAsync(() => { StateHasChanged(); }); //Proži ponoven izriz sicer se ne zgodi nič!
+        var response = await ApiService.CreateEventAsync(NovEvent);
+        if (response.IsSuccessStatusCode)
+        {
+            Console.WriteLine("Event created successfully.");
+            OsveziPolja();
+        }
+        else
+        {
+            Console.WriteLine("Failed to create event.");
+        }
+
+        InvokeAsync(() => { StateHasChanged(); });
     }
 
     private void OsveziPolja()
     {
-        NovEvent = new DJEvent("", "", "", "", DateTime.Today, "", "");
+        NovEvent = new DJEvent("", "", DateTime.Today, "");
     }
 }
